--- a/style1.css
+++ b/style1.css
@@ -25,7 +25,7 @@ body
 #body
 {
     padding: 10px;
-    margin: auto;
+    
     border-radius: 15px; 
     height: auto;
     width: 265px;
@@ -35,8 +35,7 @@ button
 {
     color: rgb(219, 219, 219);
     background-color: rgb(97, 97, 97);
-    border-radius: 10px; 
-          
+    border-radius: 10px;           
     margin: 0px;
     height: 50px;
     width: 50px; 
@@ -62,8 +61,13 @@ button:hover
     border-color: rgb(77, 77, 77);
     background-color: rgb(97, 128, 88);
     color: rgb(0, 0, 0);    
-    height:70px;
-    
+    height:70px;    
     text-align: right; 
     border-radius: 5px;
+}
+#Del{
+    background-color: rgb(226, 39, 39);
+}
+#Del:hover{
+    background-color:rgb(223, 101, 101) ;
 }
