--- a/style1.css
+++ b/style1.css
@@ -15,7 +15,7 @@ body
     padding: 0px;
     margin: 10px;
     background-color: rgb(0, 0, 0);
-    color: white;
+    color: rgb(230, 230, 230);
 }
 #heading
 { 
@@ -24,6 +24,11 @@ body
 }
 #body
 { 
+    border-style: outset;
+    border-color: rgb(71, 71, 71);
+    border-bottom-color: rgb(114, 114, 114);
+    border-right-color: rgb(114, 114, 114);
+    border-width: 7px;
     margin: auto;
     display: grid;
     padding: 10px;    
@@ -102,9 +107,9 @@ button:hover
 #Del{
     grid-row:4;
     grid-column: 5;
-    background-color: rgb(226, 39, 39);
+    background-color: rgb(173, 27, 27);
     border-style:outset;
-    border-color: rgb(110, 21, 21);
+    border-color: rgb(53, 12, 12);
 }
 #Del:active{
     border-style: inset;
